fix | z-index pseudo

--- a/about-us.css
+++ b/about-us.css
@@ -311,7 +311,6 @@ img {
         align-items: start;
         margin-top: 40px;
         height: 500px;
-        background-color: transparent;
 
         .btn-container {
             padding: 10px 20px;
@@ -336,7 +335,6 @@ img {
             display: flex;
             gap: 20px;
             justify-content: space-between;
-            background-color: transparent;
 
             .s-item {
                 position: relative;
@@ -348,6 +346,7 @@ img {
                 flex: 1;
                 transition: 0.5s;
                 border-radius: 15px;
+                z-index: 1;
 
                 .icon {
                     height: 80px;
@@ -521,7 +520,6 @@ img {
                         transform: translateX(-50%);
                         height: 150%;
                         border-left: 1px dashed rgba(0, 0, 0, 0.5);
-
                     }
 
                     .text-container {
